tests/build/property/defaults.stderr
error: expected `default("arg1", ..)` or `default(arg1: "arg1", ..)`
 --> $DIR/defaults.rs:3:21
  |
3 | #[property(context, default)]
  |                     ^^^^^^^

error: expected `default("arg1", ..)` or `default(arg1: "arg1", ..)`
 --> $DIR/defaults.rs:9:28
  |
9 | #[property(context, default())]
  |                            ^^

error: missing field `b` in property initializer
  --> $DIR/defaults.rs:21:28
   |
21 | #[property(context, default(a: true))]
   |                            ^^^^^^^^^

error: unknown field `c`
  --> $DIR/defaults.rs:33:47
   |
33 | #[property(context, default(a: true, b: 2555, c: "ABC"))]
   |                                               ^

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/defaults.rs:15:28
   |
15 | #[property(context, default(true))]
   |                            ^----^
   |                            ||
   |                            |supplied 1 argument
   |                            expected 2 arguments
   |
note: associated function defined here
  --> $DIR/defaults.rs:15:1
   |
15 |    #[property(context, default(true))]
   |   _-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  |_|
   | ||
16 | || pub fn incorrect_default_args_count_u_1(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   | ||____________________________________________________________-______________________-
   |  |____________________________________________________________|
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> $DIR/defaults.rs:27:28
   |
27 | #[property(context, default(true, 2555, "ABC"))]
   |                            ^----^^----^^-----^
   |                            |            |
   |                            |            supplied 3 arguments
   |                            expected 2 arguments
   |
note: associated function defined here
  --> $DIR/defaults.rs:27:1
   |
27 |    #[property(context, default(true, 2555, "ABC"))]
   |   _-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  |_|
   | ||
28 | || pub fn incorrect_default_args_count_u_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   | ||____________________________________________________________-______________________-
   |  |____________________________________________________________|
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{integer}: zero_ui::prelude::IntoVar<bool>` is not satisfied
  --> $DIR/defaults.rs:39:28
   |
39 | #[property(context, default(2555, true))]
   | ---------------------------^^^^^^^^^^^^--
   | |                          |
   | |                          the trait `zero_ui::prelude::IntoVar<bool>` is not implemented for `{integer}`
   | required by `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`
   |
   = help: the following implementations were found:
             <&'static [u8; N] as zero_ui::prelude::IntoVar<WindowIcon>>
             <&'static [u8] as zero_ui::prelude::IntoVar<WindowIcon>>
             <&'static str as zero_ui::prelude::IntoVar<FontName>>
             <&'static str as zero_ui::prelude::IntoVar<FontNames>>
           and 268 others

error[E0277]: the trait bound `bool: zero_ui::prelude::IntoVar<u32>` is not satisfied
  --> $DIR/defaults.rs:39:35
   |
39 | #[property(context, default(2555, true))]
   | ----------------------------------^^^^---
   | |                                 |
   | |                                 the trait `zero_ui::prelude::IntoVar<u32>` is not implemented for `bool`
   | required by `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`
   |
   = help: the following implementations were found:
             <bool as zero_ui::prelude::IntoVar<AutoSize>>
             <bool as zero_ui::prelude::IntoVar<CaptureMode>>
             <bool as zero_ui::prelude::IntoVar<FactorNormal>>
             <bool as zero_ui::prelude::IntoVar<FontFeatureState>>
           and 3 others

error[E0277]: the trait bound `{integer}: zero_ui::prelude::IntoVar<bool>` is not satisfied
  --> $DIR/defaults.rs:45:28
   |
45 | #[property(context, default(a: 2555, b: true))]
   | ---------------------------^^^^^^^^^^^^^^^^^^--
   | |                          |
   | |                          the trait `zero_ui::prelude::IntoVar<bool>` is not implemented for `{integer}`
   | required by `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`
   |
   = help: the following implementations were found:
             <&'static [u8; N] as zero_ui::prelude::IntoVar<WindowIcon>>
             <&'static [u8] as zero_ui::prelude::IntoVar<WindowIcon>>
             <&'static str as zero_ui::prelude::IntoVar<FontName>>
             <&'static str as zero_ui::prelude::IntoVar<FontNames>>
           and 268 others

error[E0277]: the trait bound `bool: zero_ui::prelude::IntoVar<u32>` is not satisfied
  --> $DIR/defaults.rs:45:41
   |
45 | #[property(context, default(a: 2555, b: true))]
   | ----------------------------------------^^^^---
   | |                                       |
   | |                                       the trait `zero_ui::prelude::IntoVar<u32>` is not implemented for `bool`
   | required by `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`
   |
   = help: the following implementations were found:
             <bool as zero_ui::prelude::IntoVar<AutoSize>>
             <bool as zero_ui::prelude::IntoVar<CaptureMode>>
             <bool as zero_ui::prelude::IntoVar<FactorNormal>>
             <bool as zero_ui::prelude::IntoVar<FontFeatureState>>
           and 3 others
